Create payment item info

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Autovalidate",
         "cupertino",
-        "Schyler"
+        "Schyler",
+        "Soliman"
     ]
 }
